--- a/index.html
+++ b/index.html
@@ -19,15 +19,10 @@
     </audio>
 
     <div class="background-hearts">
-      <div class="bg-heart">💖</div>
-      <div class="bg-heart">💕</div>
-      <div class="bg-heart">💖</div>
-      <div class="bg-heart">💕</div>
-      <div class="bg-heart">💖</div>
-      <div class="bg-heart">💖</div>
+     
     </div>
 
-    <div class="heart-container" onclick="openLetter()">
+    <div class="heart-container">
       <div class="heart-glow"></div>
       <svg class="heart-svg" viewBox="0 0 200 180">
         <defs>
@@ -48,12 +43,11 @@
           d="M100,150 C100,150 170,100 170,70 C170,50 155,35 135,35 C120,35 110,45 100,55 C90,45 80,35 65,35 C45,35 30,50 30,70 C30,100 100,150 100,150 Z"
         />
       </svg>
-      <div class="heart-click-hint">Click me💕</div>
     </div>
 
     <div class="message">I love you so much Rana</div>
 
-    <div class="letter-container">
+    <div class="letter-container" onclick="openLetter()">
       <div class="envelope-wrapper">
         <div class="magic-sparkles">
           <div class="sparkle-ring"></div>
