--- a/index.html
+++ b/index.html
@@ -69,9 +69,20 @@
         <div class="modal-content">
             <div class="modal-header">🌸 Letter Two 🌸</div>
             <div class="modal-message">
-                For as long as I'm here, I will bring you to a place where it’s okay to be weak. 
-                Yes there has been ups and down because of me and I am honestly working on that to get it fixed myself thats on me.
-
+                As long as I’m here, I will always bring you to a place where it’s okay to be weak. Yes, there have been ups and downs because of me, and I’m honestly working on fixing that myself—that part is on me. I am grateful for you. Truly wholeheartedly.
+                Now, when I picture happiness, it’s your face I see first laughing, giggling at my unhinged jokes. You won’t always see yourself the way I do, but I’ll keep reminding you until you do.
+                You are so, so, so incredibly gorgeous but honestly, that’s the least interesting thing about you. 
+                You’re beautiful, anyone with eyes can see that. You walk into a room and people notice without you even trying. It’s like your presence shifts the atmosphere, like the energy adjusts simply because you showed up. 
+                But beauty is the easiest thing to see. It takes zero effort to point out someone’s face.
+                What I see in you takes attention. It takes knowing you. And that’s the part that makes you unforgettable.
+                I notice the way your eyes change and sparkle when you talk about something you truly care about—not just the sparkle, but the focus, the passion, the way your whole voice lifts. It’s like watching a flame catch, like a dewdrop resting on a grass petal. Even when you try to hide it—maybe you don’t even realize it—that passion is one of the most beautiful things about you.
+                I notice your laugh—not the polite one you use when you’re trying to be quiet, but the real one. The one that takes over your whole body. The one you try to cover because you’re scared it’s too loud, too much. But honestly, that laugh makes me laugh just by hearing it. It fills the room in a way nothing else does for me.
+                And then there are the moments nobody else sees—the way you fall silent when you’re hurting, the way you try to hold yourself together because you don’t want to burden anyone with your problems. You carry your pain like it’s something you owe the world an apology for, like you have to be strong all the time. And somehow, even in your quietest moments, you still show up for people with your whole heart.
+                That is strength. And it’s rare.
+                That kind of beauty can’t be put on with makeup. It can’t be faked or recreated. The way you care leaves marks on the people lucky enough to know you. Your beauty might turn heads, but your soul—the way you love, the way you give, the way you dream—that’s what makes people stay. That’s what makes you unforgettable.
+                People think they know you because they see your face. But if they paid attention the way I did—if they really paid attention—they’d realize your looks are just the cover, not the story.
+                Yes, you’re gorgeous. But honestly, that’s the least extraordinary thing about you. 
+                Your real beauty lives in the parts of you the world never sees unless they earn it—and that’s the part of you I never stop being in awe of.
             </div>
             <div class="modal-footer">
                 <button class="close-btn secondary" onclick="openLetter(1)">Back</button>
